--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-        <img src="pic1.png" alt="Logo" style="width:40px;" class="rounded-pill">
+        <img src="pic1.PNG" alt="Logo" style="width:40px;" class="rounded-pill">
     </a>
     <ul class="navbar-nav">
       <li class="nav-item">
